--- a/src/app.html
+++ b/src/app.html
@@ -2,8 +2,9 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8" />
-		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
+		<link rel="icon" href="./transp-bigO.png" />
 		<meta name="viewport" content="width=device-width" />
+		<title>OHS Gamedev</title>
 		%sveltekit.head%
 	</head>
 	<body>
